--- a/ansible/roles/deploy/tasks/main.yml
+++ b/ansible/roles/deploy/tasks/main.yml
@@ -3,11 +3,8 @@
 - import_tasks: install_postgres.yml
   tags: install_postgres
 
-- import_tasks: create_roles.yml
+- import_tasks: create_db_and_roles.yml
   tags: create_roles
-
-- import_tasks: configure_access.yml
-  tags: configure_access
 
 - import_tasks: create_db_schema.yml
   tags: create_db_schema
