create schema from db dump
- creating schema using postgresql_table role was pretty tricky

--- a/ansible/roles/deploy/tasks/create_db_and_roles.yml
+++ b/ansible/roles/deploy/tasks/create_db_and_roles.yml
@@ -30,7 +30,8 @@
 - name: Create mud db
   postgresql_db:
     name: mud
-    state: present
+    state: restore
+    target: mud.sql
     login_user: postgres
 
 - debug:
