add support for uninstalling mud

--- a/ansible/Makefile
+++ b/ansible/Makefile
@@ -1,2 +1,4 @@
 install:
-	ansible-playbook -i inventory -e @./secrets.yml install.yml
+	ansible-playbook -i inventory -e @secrets.yml install.yml
+uninstall:
+	ansible-playbook -v -i inventory uninstall.yml
