--- a/ansible/roles/uninstall/tasks/drop_db_and_roles.yml
+++ b/ansible/roles/uninstall/tasks/drop_db_and_roles.yml
@@ -16,7 +16,7 @@
   become: true
   become_user: postgres
 
-- name: Grant local access to mud
+- name: Revoke local access to mud
   postgresql_pg_hba:
     dest: /etc/postgresql/13/main/pg_hba.conf
     contype: local
