--- a/ansible/roles/deploy/tasks/create_db_and_roles.yml
+++ b/ansible/roles/deploy/tasks/create_db_and_roles.yml
@@ -25,6 +25,11 @@
     state: present
   become: true
 
+# https://www.postgresql.org/docs/13/app-pg-ctl.html
+- name: Reload pg_hba.conf configuration
+  shell: pg_ctlcluster 13 main reload
+  become: true
+
 - name: Remove existing mud db if present
   postgresql_db:
     name: mud
